--- a/index.html
+++ b/index.html
@@ -99,19 +99,23 @@
   <script type="importmap">
 {
   "imports": {
-    "jspdf": "https://esm.sh/jspdf@^2.5.1",
-    "jspdf-autotable": "https://esm.sh/jspdf-autotable@^3.8.2",
-    "recharts": "https://esm.sh/recharts@^3.1.2",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.8.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.539.0",
+    "recharts": "https://esm.sh/recharts@^3.1.2",
     "react/": "https://esm.sh/react@^19.1.1/",
     "react": "https://esm.sh/react@^19.1.1",
-    "lucide-react": "https://esm.sh/lucide-react@^0.539.0"
+    "vite": "https://esm.sh/vite@^7.1.2",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.0.0",
+    "jspdf": "https://esm.sh/jspdf@^3.0.1",
+    "process": "https://esm.sh/process@^0.11.10",
+    "jspdf-autotable": "https://esm.sh/jspdf-autotable@^5.0.2"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
